('GSM' is Greg Sabino Mullane, greg@turnstep.com)

1.50
	- Fix META.yml file. (CPAN bug #25759) [GSM]
	- Force column names to respect utf8-ness. Per report from Ch Lamprect. [GSM]
	- Add support for asynchronous queries. [GSM]
	- Make minimum supported server 7.4. [GSM]
	- Add private_attribute_info() method. [GSM]
	- Add SQL_INTERVAL and others to types.c [GSM]
	- Change $dbh->{Name} to return the entire DSN string, minus the 
		'dbi:Pg:' part. Thanks to Mark Stosberg for the idea. [GSM]
	- Add $dbh->{pg_placeholder_dollaronly} to allow '?' and other symbols 
		to be used in prepared statements without getting interpreted as 
		placeholders, i.e. the geometric operator '?#' (CPAN bug #24124) [GSM]
	- Use prepare_cached in last_insert_id function. (CPAN bug #24313)
	- Switch from cvs to subversion. Switch from gborg to perl.org.
	- Fix pg_description join in table_info(). [Max Cohan max@endpoint.com]
	- Fix memory leak in bytea quoting. (CPAN bug #21392). Fix memory leak 
		in pg_notifies. [Stephen Marshall smarshall@wsi.com]
	- Added statistics_info function [Brandon Black blblack@gmail.com]

1.49 May 7, 2006
	- Thanks to Backcountry.com for sponsoring work on this release. [GSM]
	- Add the statement handle attribute ParamTypes, and fix an error 
		in ParamValues. ParamTypes requires DBI 1.49 or better. [GSM]
	- Strip the final newline from error messages, so that die can add 
		in the line number. (CPAN bug #18900) [GSM]
	- Make workaround for PQresultErrorField not returning proper 
		result when an error is set and we are connecting via TCP/IP.
		This allows correct $dbh->state() values. [GSM]
	- Fix incorrect quoting preventing compiling. (CPAN bug #18640)
	- Add support for quoting and binding of geometric types: POINT, 
		LINE, LSEG, BOX, PATH, POLYGON, and CIRCLE. Also added the 
		TID type. [GSM]

1.48 April 5, 2006
	- Bump minimum DBI version to 1.45 (CPAN bug #18260) (plus problems 
		in versions 1.42 and 1.44) [GSM]