@@ -3,11 +3,12 @@
 use ExtUtils::MakeMaker;
 use Config;
 use strict;
+use warnings;
 use 5.006001;
 use DBI 1.45;
 use DBI::DBD;
 
-my $VERSION = "1.50";
+my $VERSION = '1.50';
 
 my $lib;
 BEGIN {
@@ -27,7 +28,6 @@ if ($VERSION =~ /_/) {
 }
 
 print "Configuring DBD::Pg $VERSION\n";
-print "Remember to actually read the README file!\n";
 
 my $POSTGRES_INCLUDE;
 my $POSTGRES_LIB;
@@ -39,7 +39,7 @@ require App::Info::Handler::Prompt;
 my $p = App::Info::Handler::Prompt->new;
 my $pg = App::Info::RDBMS::PostgreSQL->new(on_unknown => $p);
 my ($major_ver, $minor_ver, $patch, $conf) = map {$pg->$_} qw/major_version minor_version patch_version configure/;
-my $serverversion = sprintf("%d%.02d%.02d", $major_ver, $minor_ver, $patch);
+my $serverversion = sprintf '%d%.02d%.02d', $major_ver, $minor_ver, $patch;
 my $defaultport = $conf =~ /with-pgport=(\d+)/ ? $1 : 5432;
 
 if ((!$ENV{POSTGRES_INCLUDE} or !$ENV{POSTGRES_LIB}) and !$ENV{POSTGRES_HOME}) {
@@ -54,10 +54,14 @@ if ((!$ENV{POSTGRES_INCLUDE} or !$ENV{POSTGRES_LIB}) and !$ENV{POSTGRES_HOME}) {
 }
 
 my $os = $^O;
-print "OS: $os\n";
 print "PostgreSQL version: $serverversion (default port: $defaultport)\n";
-print "POSTGRES_INCLUDE: $ENV{POSTGRES_INCLUDE}\n";
-print "POSTGRES_LIB: $ENV{POSTGRES_LIB}\n";
+my $showhome = $ENV{POSTGRES_HOME} || '(not set)';
+print "POSTGRES_HOME: $showhome\n";
+my $showinc = $ENV{POSTGRES_INCLUDE} || '(not set)';
+print "POSTGRES_INCLUDE: $showinc\n";
+my $showlib = $ENV{POSTGRES_LIB} || '(not set)';
+print "POSTGRES_LIB: $showlib\n";
+print "OS: $os\n";
 
 if ($serverversion < 1) {
 	die "Could not determine the PostgreSQL library version.\n".
@@ -68,7 +72,7 @@ if ($serverversion < 1) {
 
 if ($os =~ /Win32/) {
 	for ($POSTGRES_INCLUDE, $POSTGRES_LIB) {
-		$_ = qq{"$_"} if index($_,'"');
+		$_ = qq{"$_"} if index $_,'"';
 	}
 }
 
@@ -97,23 +101,23 @@ my $comp_opts = $Config{q{ccflags}} . " -DPGLIBVERSION=$serverversion -DPGDEFPOR
 
 if ($ENV{DBDPG_GCCDEBUG}) {
 	warn "Enabling many compiler options\n";
-	$comp_opts .= " -Wchar-subscripts -Wcomment";
-	$comp_opts .= " -Wformat=2"; ## does -Wformat,-Wformat-y2k,-Wformat-nonliteral,-Wformat-security
-	$comp_opts .= " -Wnonnull";
-	$comp_opts .= " -Wuninitialized -Winit-self"; ## latter requires the former
-	$comp_opts .= " -Wimplicit"; ## does -Wimplicit-int and -Wimplicit-function-declaration
-	$comp_opts .= " -Wmain -Wmissing-braces -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wswitch-enum -Wtrigraphs";
-	$comp_opts .= " -Wunused"; ## contains -Wunused- function,label,parameter,variable,value
-	$comp_opts .= " -Wunknown-pragmas -Wstrict-aliasing";
-	$comp_opts .= " -Wall"; ## all of above, but we enumerate anyway
-	$comp_opts .= " -Wextra -Wdeclaration-after-statement -Wendif-labels -Wpointer-arith";
-	$comp_opts .= " -Wbad-function-cast -Wcast-qual -Wcast-align -Wconversion -Wsign-compare -Waggregate-return";
-	$comp_opts .= " -Wmissing-prototypes -Wmissing-declarations -Wmissing-format-attribute -Wpacked -Winline -Winvalid-pch";
-	$comp_opts .= " -Wdisabled-optimization"; ## Not terribly useful
-	$comp_opts .= " -Wnested-externs"; ## Does not like Perl__notused (from DBIXS;)
+	$comp_opts .= ' -Wchar-subscripts -Wcomment';
+	$comp_opts .= ' -Wformat=2'; ## does -Wformat,-Wformat-y2k,-Wformat-nonliteral,-Wformat-security
+	$comp_opts .= ' -Wnonnull';
+	$comp_opts .= ' -Wuninitialized -Winit-self'; ## latter requires the former
+	$comp_opts .= ' -Wimplicit'; ## does -Wimplicit-int and -Wimplicit-function-declaration
+	$comp_opts .= ' -Wmain -Wmissing-braces -Wparentheses -Wsequence-point -Wreturn-type -Wswitch -Wswitch-enum -Wtrigraphs';
+	$comp_opts .= ' -Wunused'; ## contains -Wunused- function,label,parameter,variable,value
+	$comp_opts .= ' -Wunknown-pragmas -Wstrict-aliasing';
+	$comp_opts .= ' -Wall'; ## all of above, but we enumerate anyway
+	$comp_opts .= ' -Wextra -Wdeclaration-after-statement -Wendif-labels -Wpointer-arith';
+	$comp_opts .= ' -Wbad-function-cast -Wcast-qual -Wcast-align -Wconversion -Wsign-compare -Waggregate-return';
+	$comp_opts .= ' -Wmissing-prototypes -Wmissing-declarations -Wmissing-format-attribute -Wpacked -Winline -Winvalid-pch';
+	$comp_opts .= ' -Wdisabled-optimization'; ## Not terribly useful
+	$comp_opts .= ' -Wnested-externs'; ## Does not like Perl__notused (from DBIXS;)
 }
 
-my %opts = 
+my %opts =
 	(
 	 NAME           => 'DBD::Pg',
 	 VERSION_FROM   => 'Pg.pm',
@@ -152,15 +156,36 @@ if ($Config{dlsrc} =~ /dl_none/) {
 }
 
 sub MY::postamble {
-	my $string = &dbd_postamble;
+	my $string = dbd_postamble;
 	## Evil, evil stuff - but we really want to suppress the "duplicate function" message!
 	$string =~ s/dependancy/dependency/g; ## why not, while we are here
 	$string =~ s#(BASEEXT\)/g)#$1; s/^do\\\(/dontdo\\\(/#;
 	return $string;
 }
 
-WriteMakefile(%opts);
+my $output = WriteMakefile(%opts);
 
-exit(0);
+if (!exists $output->{EXTRALIBS} or $output->{EXTRALIBS} !~ /\-lpq/) {
+	warn qq{
+==========================================================
+
+WARNING! No libpq libraries were detected!
+
+You need to install the postgresql-libs package for your system, 
+or set the POSTGRES_LIB environment variable to the correct place.
+
+Removing $output->{MAKEFILE}
+
+===========================================================
+
+};
+
+	## Do not let make proceed
+	unlink $output->{MAKEFILE};
+
+	exit 1;
+}
+
+exit 0;
 
 # end of Makefile.PL
